--- a/.github/workflows/build-plugin.yml
+++ b/.github/workflows/build-plugin.yml
@@ -298,9 +298,12 @@ jobs:
             --repo dinoki-ai/osaurus-tools \
             --head "${OWNER}:${BRANCH}" \
             --title "Add ${PLUGIN_ID} v${VERSION}" \
-            --body "**Plugin:** \`${PLUGIN_ID}\`
+            --body "$(cat <<EOF
+**Plugin:** \`${PLUGIN_ID}\`
 **Version:** \`${VERSION}\`
 **Source:** [${{ github.repository }}](${{ github.server_url }}/${{ github.repository }})
 
 ---
-*Auto-generated from plugin manifest*"
+*Auto-generated from plugin manifest*
+EOF
+)"
