added browser skill

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -212,8 +212,14 @@ jobs:
           # Create artifact name
           ARTIFACT="${PLUGIN_ID}-${VERSION}-macos-arm64.zip"
 
-          # Create zip with just the dylib
-          zip -j "$BUILD_DIR/$ARTIFACT" "$DYLIB"
+          # Create zip with dylib and SKILL.md (if present)
+          TOOL_DIR="tools/$TOOL"
+          if [ -f "$TOOL_DIR/SKILL.md" ]; then
+            zip -j "$BUILD_DIR/$ARTIFACT" "$DYLIB" "$TOOL_DIR/SKILL.md"
+            echo "Included SKILL.md in artifact"
+          else
+            zip -j "$BUILD_DIR/$ARTIFACT" "$DYLIB"
+          fi
 
           # Compute SHA256 and size
           SHA256=$(shasum -a 256 "$BUILD_DIR/$ARTIFACT" | cut -d ' ' -f 1)
@@ -411,6 +417,21 @@ jobs:
           MIN_OSAURUS=$(echo "$MANIFEST" | jq -r '.min_osaurus // "0.5.0"')
           TOOLS=$(echo "$MANIFEST" | jq -c '[.capabilities.tools // [] | .[] | {name: .id, description: .description}]')
 
+          # Detect SKILL.md for the tool
+          TOOL="${{ steps.tag.outputs.tool }}"
+          SKILL_FILE="tools/$TOOL/SKILL.md"
+          SKILL_CONTENT=""
+          SKILLS="[]"
+          if [ -f "$SKILL_FILE" ]; then
+            SKILL_CONTENT=$(cat "$SKILL_FILE")
+            SKILL_NAME=$(echo "$SKILL_CONTENT" | sed -n '/^---$/,/^---$/p' | sed '1d;$d' | grep '^name:' | head -1 | sed 's/^name:[[:space:]]*//')
+            SKILL_DESC=$(echo "$SKILL_CONTENT" | sed -n '/^---$/,/^---$/p' | sed '1d;$d' | grep '^description:' | head -1 | sed 's/^description:[[:space:]]*//')
+            if [ -n "$SKILL_NAME" ]; then
+              SKILLS=$(jq -nc --arg name "$SKILL_NAME" --arg desc "$SKILL_DESC" '[{name: $name, description: $desc}]')
+            fi
+            echo "Found SKILL.md for $TOOL (skill name: $SKILL_NAME)"
+          fi
+
           # Default name from plugin_id suffix if not set
           if [ -z "$NAME" ]; then
             NAME=$(echo "$PLUGIN_ID" | rev | cut -d. -f1 | rev)
@@ -420,6 +441,13 @@ jobs:
           # Download URL for the release artifact
           DOWNLOAD_URL="https://github.com/${{ github.repository }}/releases/download/${TAG}/${ARTIFACT}"
 
+          # Build capabilities object (include skills only if present)
+          if [ "$SKILLS" = "[]" ]; then
+            CAPABILITIES=$(jq -n --argjson tools "$TOOLS" '{ tools: $tools }')
+          else
+            CAPABILITIES=$(jq -n --argjson tools "$TOOLS" --argjson skills "$SKILLS" '{ tools: $tools, skills: $skills }')
+          fi
+
           # Build registry JSON using jq for proper escaping
           jq -n \
             --arg plugin_id "$PLUGIN_ID" \
@@ -428,7 +456,7 @@ jobs:
             --arg homepage "https://github.com/${{ github.repository }}" \
             --arg license "$LICENSE" \
             --argjson authors "$AUTHORS" \
-            --argjson tools "$TOOLS" \
+            --argjson capabilities "$CAPABILITIES" \
             --arg minisign_pubkey "$MINISIGN_PUBLIC_KEY" \
             --arg min_macos "$MIN_MACOS" \
             --arg min_osaurus "$MIN_OSAURUS" \
@@ -438,14 +466,15 @@ jobs:
             --arg sha256 "$SHA256" \
             --argjson size "$SIZE" \
             --arg signature "$SIGNATURE" \
-            '{
+            --arg skill "$SKILL_CONTENT" \
+            '({
               plugin_id: $plugin_id,
               name: $name,
               description: $description,
               homepage: $homepage,
               license: $license,
               authors: $authors,
-              capabilities: { tools: $tools },
+              capabilities: $capabilities,
               public_keys: { minisign: $minisign_pubkey },
               requires: { min_macos: $min_macos, osaurus_min_version: $min_osaurus },
               versions: [{
@@ -461,7 +490,7 @@ jobs:
                   minisign: { signature: $signature }
                 }]
               }]
-            }' > /tmp/registry-manifest.json
+            } + if ($skill | length) > 0 then { skill: $skill } else {} end)' > /tmp/registry-manifest.json
 
           echo "Generated registry manifest:"
           cat /tmp/registry-manifest.json | jq .
@@ -473,10 +502,11 @@ jobs:
           REGISTRY_FILE="plugins/${PLUGIN_ID}.json"
 
           if [ -f "$REGISTRY_FILE" ]; then
-            # Merge new version into existing registry file
-            # Update tools from manifest and prepend new version to versions array
+            # Merge capabilities, skill content, and prepend new version to versions array
             jq --slurpfile new /tmp/registry-manifest.json '
               .capabilities.tools = $new[0].capabilities.tools |
+              if ($new[0].capabilities | has("skills")) then .capabilities.skills = $new[0].capabilities.skills else . end |
+              if ($new[0] | has("skill")) then .skill = $new[0].skill else . end |
               .versions = [$new[0].versions[0]] + .versions |
               .versions |= unique_by(.version)
             ' "$REGISTRY_FILE" > /tmp/updated.json && mv /tmp/updated.json "$REGISTRY_FILE"
